[gd_scene load_steps=8 format=3 uid="uid://dec7gq4nqo5f3"]

[ext_resource type="Script" path="res://Scripts/UI/pause_button.gd" id="1_jap0l"]
[ext_resource type="Texture2D" uid="uid://cw2sa6dpe3kv6" path="res://Sprites/UI/UI_Icons.png" id="2_rhd88"]
[ext_resource type="FontFile" uid="uid://dxr68c8ej2ev0" path="res://Sprites/Fonts/LowresPixel-Regular.otf" id="3_dk73s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7grep"]
size = Vector2(48, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0wb7"]
atlas = ExtResource("2_rhd88")
region = Rect2(144, 128, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bdm8"]
atlas = ExtResource("2_rhd88")
region = Rect2(144, 144, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6no06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0wb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bdm8")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="PauseButton" type="Area2D"]
collision_layer = 256
collision_mask = 0
script = ExtResource("1_jap0l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7grep")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6no06")

[node name="Label" type="Label" parent="."]
offset_left = -4.0
offset_top = -6.0
offset_right = 126.0
offset_bottom = 27.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("3_dk73s")
theme_override_font_sizes/font_size = 26
text = "escape"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
